# ServerImplementations

./: CMakeLists.txt  README.md  main.c  server.c
docs/: hello.html  hello_16.html
include/: mp_util.h  mt_util.h  request_data.h  server.h  utility.h
src/: mp_util.c  mt_util.c  request_data.c  server.c  utility.c
test/: parallel_requests.py
